welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:25: error: ';' expected but '=' found.
    t[i] = t[j];
         ^Array1:26: error: ';' expected but '=' found.
    t[j]=x;
        ^Array1:28: error: identifier expected but integer literal found.
  x = t[5]
        ^Array1:29: error: ']' expected but ';' found.
  t[0]=t[5]
^Array1:29: error: identifier expected but integer literal found.
  t[0]=t[5]
    ^Array1:30: error: ']' expected but ';' found.
  t[5]=x
^Array1:30: error: identifier expected but integer literal found.
  t[5]=x
    ^Array1:31: error: ']' expected but '}' found.
}
^